CSS scrollbar fixes, increases traj limit to 1000

--- a/src/scss/FilterList.scss
+++ b/src/scss/FilterList.scss
@@ -16,3 +16,11 @@ div.filter-container {
     display: none;
   }
 }
+
+.MuiPaper-root::-webkit-scrollbar {
+  display: none;
+}
+
+.MuiDialogContent-root.filters-content::-webkit-scrollbar {
+  display: none
+}
